<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>nl.queuemanager</groupId>
  <artifactId>messagemanager</artifactId>
  <name>Message Manager</name>
  <version>3.2</version>
  <packaging>pom</packaging>
  
  <modules>
    <module>jmsmessages</module>
    <module>messagemanager-core</module>
    <module>messagemanager-ui</module>
    <module>messagemanager-app</module>
    <module>messagemanager-plugin-api</module>
    <module>messagemanager-activemq</module>
    <module>messagemanager-sonicmq</module>
    <module>messagemanager-solace</module>
    <module>messagemanager-fakemq</module>
    <module>messagemanager-plugins-package</module>
    <module>ws-app</module>
  </modules>
  
  <properties>
  	<guice-version>4.0</guice-version>
  </properties>
  
  <scm>
  	<developerConnection>scm:hg:${project.basedir}</developerConnection>
    <tag>HEAD</tag>
  </scm>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
		<version>2.3.2</version>
        <configuration>
          <source>15</source>
          <target>15</target>
          <debug>true</debug>
          <debuglevel>lines,source</debuglevel>
        </configuration>
      </plugin>
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-source-plugin</artifactId>
      	<version>2.1.1</version>
      	<executions>
      		<execution>
      			<phase>package</phase>
      			<goals>
      				<goal>jar</goal>
      			</goals>
      		</execution>
      	</executions>
      </plugin>

      <!--
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>1.4</version>
	<configuration>
		<format>{0,date,yyyyMMddHHmmss}</format>
		<items>
			<item>timestamp</item>
		</items>
	</configuration>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      -->

    </plugins>
    
    <pluginManagement>
    	<plugins>
	    	<plugin>
	    		<groupId>org.apache.maven.plugins</groupId>
	    		<artifactId>maven-jar-plugin</artifactId>
	    		<version>2.4</version>
	    	</plugin>
    	</plugins>
    </pluginManagement>
  </build>

	<dependencyManagement>
		<dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>[4,5)</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>1.8.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
	            <groupId>com.google.code.findbugs</groupId>
	            <artifactId>jsr305</artifactId>
	            <version>1.3.9</version>
	        </dependency>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>${guice-version}</version>
				<type>jar</type>
				<scope>compile</scope>
                                <exclusions>
                                    <exclusion>
                                        <groupId>javax.inject</groupId>
                                        <artifactId>javax.inject</artifactId>
                                    </exclusion>
                                    <exclusion>
                                        <groupId>aopalliance</groupId>
                                        <artifactId>aopalliance</artifactId>
                                    </exclusion>
                                </exclusions>
			</dependency>
			<dependency>
				<groupId>com.google.inject.extensions</groupId>
				<artifactId>guice-multibindings</artifactId>
				<version>${guice-version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.google.inject.extensions</groupId>
				<artifactId>guice-assistedinject</artifactId>
				<version>${guice-version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
			    <groupId>com.google.guava</groupId>
			    <artifactId>guava</artifactId>
			    <version>18.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>gdries-nexus-deployment</id>
			<name>Releases</name>
			<url>https://radon.gdries.nl/nexus/repository/maven-releases</url>
		</repository>
		<snapshotRepository>
			<id>gdries-nexus-deployment</id>
			<name>Releases</name>
			<url>https://radon.gdries.nl/nexus/repository/maven-snapshots</url>
		</snapshotRepository>
	</distributionManagement>
        
        <repositories>
            <repository>
                <id>gdries</id>
                <name>gdries</name>
                <url>https://radon.gdries.nl/nexus/repository/maven-public/</url>
            </repository>
            <repository>
                <id>netbeans</id>
                <name>Netbeans</name>
                <url>http://bits.netbeans.org/maven2/</url>
            </repository>
        </repositories>


</project>
